# benchmark_dart_javascript

./: .gitignore  .gitmodules  README.md  benchmark.dart  bun.ts  dart.dart  deno.ts  go.go  node.js  wrk_post.lua
axum/: Cargo.toml  README.md  wrk_post.lua
axum/src/: main.rs
dart_axum_tokio/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
dart_axum_tokio/lib/: dart_axum_tokio_sever.dart
dart_axum_tokio/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
dart_axum_tokio/lib/src/rust/api/: minimal.dart
dart_axum_tokio/rust/: Cargo.toml
dart_axum_tokio/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
dart_axum_tokio/rust/src/api/: minimal.rs
regex/: .gitignore  Makefile  regex.py  regex.swift  resuls
